--- a/cinema_page/cinema.html
+++ b/cinema_page/cinema.html
@@ -23,14 +23,14 @@
 <body>
   <div class="top bg-dark bg-gradient d-flex align-items-center">
       <!-- 네비게이션바에 들어가는 이미지 width로 크기 조절 -->
-      <img class="element1 me-auto" src="./logo.png" width="200px">
+      <img class="element1 me-auto" src="./img/logo.png" width="200px">
       <div class="element2">Home</div>
       <div class="element2">Community</div>
       <div class="element2">Login</div>
   </div>
 
   <!-- 백그라운드 이미지 안에 제목태그, span태그 넣기 -->
-  <div class="background" style="height: 500px; text-align: center; background-image: url('./header.jpg')">
+  <div class="background" style="height: 500px; text-align: center; background-image: url('./img/header.jpg')">
     <h1 class="text" style="padding-top: 100px;">Cinema</h1>
     <h1 class="text" style="margin-bottom: 30px;">Community</h1>
 
@@ -51,15 +51,15 @@
     <div width="30%" style="text-align: center">
       <!-- 30%를 차지하는 상자의 100%를 이미지가 차지하게 설정 -->
       <!-- width가 100%면 글자가 밀려나서 아래에 위치, 만약 100%가 아니라면 이미지 옆에 위치함 -->
-      <img src="./web.png" width="100%">
+      <img src="./img/web.png" width="100%">
       Web
     </div>
     <div width="30%" style="text-align: center">
-      <img src="./html5.png" width="100%">
+      <img src="./img/html5.png" width="100%">
       HTML5
     </div>
     <div width="30%" style="text-align: center">
-      <img src="./css3.png" width="100%">
+      <img src="./img/css3.png" width="100%">
       CSS3
     </div>
   </div>
