--- a/movie_homepage/02_home.html
+++ b/movie_homepage/02_home.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <!-- 01_nav_footer에서 완성한 Navigation bar & Modal & Footer 코드를 적절한 위치에 사용합니다. -->
+  <!-- 네비게이션바를 상단에 고정하기 위해서 nav태그에 fixed-top 속성 부여하고, 다른 컨텐츠가 네비게이션바 속에 가려지는 것을 막기 위해 body태그의 padding-top에 80px 부여함 -->
   <nav class="fixed-top navbar navbar-expand-md bg-dark navbar-dark">
     <div class="container-fluid">
       <a href="./02_home.html">
@@ -76,7 +77,6 @@
 
   <!-- 02_home.html -->
   <!-- Carousel -->
-
   <header>
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -106,11 +106,14 @@
   <h1 style="text-align: center; margin-top: 40px; font-weight: bold;">Boxoffice</h1>
 
 
-  
+  <!-- container, row, col을 통해 배치시키기 -->
 <div class="container">
+  <!-- 화면 크기에 따라 보이는 카드의 개수 다르게 설정하기 -->
+  <!-- 카드 사이 간격을 g-4로 조정 -->
   <section class="row row-cols-1 row-cols-sm-3 g-4">
 
     <article class="col">
+      <!-- 카드 내용의 길이가 서로 다르더라도 일정하게 고정시키기 위해 h-100속성 부여 -->
       <div class="card h-100">
         <img src="./images/movie1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
